# jackpot

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
notebooks/: blind_inv_pb.ipynb  inv_pb.ipynb  jackpot_template.ipynb  minimal_template.ipynb  solar_system.ipynb
notebooks/.ipynb_checkpoints/: jackpot_template-checkpoint.ipynb
notebooks/saves/tuto/: tuto_adv_mani_n_2.pth  tuto_singpairs_n_10.pth
src/article_examples/blind_inv_pb/: convolution_Fresnel_2D.py  deblur_simple.py
src/article_examples/inv_pb/: all_models.py
src/article_examples/solar_system/: solar_system_functions.py
src/jackpot/: GSPnP_jvp.py  __init__.py  additional_criteria.py  adversarial.py  direct_model.py  grid.py  grids.py  import_model_zoo.py  jackpot.py  manifold.py  model_operator.py  prof_likelihood.py  singular_solvers.py  solvers.py  stop_criteria.py  torch_lobpcg.py  utils.py
tests/: test_torch_lobpcg.py
