[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jackpot"
version = "0.1.4"
description = "Adversarial manifold & singular solver tooling for Jackpot experiments"
readme = "README.md"
authors = [
  { name="Nathanaël Munier", email="nathanael.munier@ens-rennes.fr" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "tqdm>=4.64",
    "matplotlib>=3.7",
    "numpy>=1.24"
]

[project.urls]
Homepage = "https://gitlab.irit.fr/mambo/nathanael_munier/jackpot"

[tool.setuptools.packages.find]
where = ["src"]
