[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jackpot"
version = "0.1.7"
description = "Adversarial manifold & singular solver tool for Jackpot experiments"
readme = "README.md"
authors = [
  { name="Nathanaël Munier", email="nathanael.munier@uni-graz.at" }
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    "tqdm>=4.64",
    "matplotlib>=3.7",
    "numpy>=1.24",
    "deepinv",
    "imageio",
]

[project.urls]
Homepage = "https://github.com/munnath/jackpot"

[tool.setuptools.packages.find]
where = ["src"]
